DevTools: [Popover] fix css for popover scrollbar
Fix reference to non-existent image in some rules to style popover
scrollbar.

R=vsevik, apavlov

Review URL: https://codereview.chromium.org/420713004

git-svn-id: svn://svn.chromium.org/blink/trunk@178933 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/inspectorStyle.css
+++ b/front_end/inspectorStyle.css
@@ -2803,13 +2803,13 @@ button.record-profile-status-bar-item.toggled-on .glyph:not(.shadow) {
 }
 
 .custom-popup-horizontal-scroll ::-webkit-scrollbar-track-piece:horizontal:decrement {
-    -webkit-border-image: url(Images/trackHoriz.png) 0 11 0 11;
+    -webkit-border-image: url(Images/thumbHoriz.png) 0 11 0 11;
     border-color: transparent;
     border-width: 0 0 0 11px;
 }
 
 .custom-popup-horizontal-scroll ::-webkit-scrollbar-track-piece:horizontal:increment {
-    -webkit-border-image: url(Images/trackHoriz.png) 0 11 0 11;
+    -webkit-border-image: url(Images/thumbHoriz.png) 0 11 0 11;
     border-color: transparent;
     border-width: 0 11px 0 0;
 }
